--- a/dirs.cfg
+++ b/dirs.cfg
@@ -7,6 +7,6 @@
 #backup_pic_dir should refer to the dir where your backups of your pictures are stored.
 [user]
 new_things_dir=/home/maze/Desktop/to_backup/
-my_pic_dir=
+my_pic_dir=/home/maze/Pictures
 backup_pic_dir=/media/maze/Transcend/BACKUP_0526840900/Pictures/
 
