--- a/dirs.cfg
+++ b/dirs.cfg
@@ -1,12 +1,12 @@
-#This is the configuration file for backup_utility.py.
-#
-#It holds the directories the user wishes to use the backup utility with.
-#
-#new_things_dir should refer to the dir where newly collected pictures are temporarily stored.
-#my_pic_dir should refer to the dir where your pictures are stored.
-#backup_pic_dir should refer to the dir where your backups of your pictures are stored.
+"""
+This is the configuration file for my_backup_utility.py.
+It holds the directories the user wishes to use the backup utility with, and is read when the script is run.
+
+originDir should point to the dir where your source is stored.
+backupDir should point to the dir where your backups are stored.
+"""
+
 [user]
-new_things_dir=/home/maze/Desktop/to_backup/
-my_pic_dir=/home/maze/Pictures/
-backup_pic_dir=/media/maze/Transcend/BACKUP_0526840900/Pictures/
+originDir=/home/maze/Pictures
+backupDir=/media/maze/Samsung USB/Pictures
 
