Refactoring and tested.

--- a/dirs.cfg
+++ b/dirs.cfg
@@ -1,12 +1,11 @@
-"""
-This is the configuration file for my_backup_utility.py.
-It holds the directories the user wishes to use the backup utility with, and is read when the script is run.
+# This is the configuration file for my_backup_utility.py.
+# It holds the directories the user wishes to use the backup utility with, and is read when the script is run.
+#
+# originDir should point to the dir where your source is stored.
+# backupDir should point to the dir where your backups are stored.
 
-originDir should point to the dir where your source is stored.
-backupDir should point to the dir where your backups are stored.
-"""
+originDir = /home/maze/Pictures
+backupDir = /media/maze/Samsung USB/Pictures
 
-[user]
-originDir=/home/maze/Pictures
-backupDir=/media/maze/Samsung USB/Pictures
-
+originDir = /home/maze/Documents/programming/my-backup-utility/testOriginDir/
+backupDir = /home/maze/Documents/programming/my-backup-utility/testBackupDir/
